--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!--Шапка-->
-    <header>
+    <header class="header">
         <nav>
             <a href="./index.html" class="logo-hd link">Web<span class="logo-hd-half">Studio</span></a>
             <ul class="nav list">
