--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--Шапка-->
-    <header>
+    <header class="header">
         <nav>
             <a href="./index.html" class="logo-hd link">Web<span class="logo-hd-half">Studio</span></a>
             <ul class="nav list">
@@ -28,7 +28,31 @@
     </header>
     <!--Уникальный контент-->
     <main>
-        <h1>portfolio</h1>
+        <h1 class="page-title">Portfolio</h1>
+        <!-- кнопки-фильтры -->
+        <section>
+            <ul class="list">
+                <li><button class="buttons" type="button">Все</button></li>
+                <li><button class="buttons" type="button">Веб-сайты</button></li>
+                <li><button class="buttons" type="button">Приложения</button></li>
+                <li><button class="buttons" type="button">Дизайн</button></li>
+                <li><button class="buttons" type="button">Макет</button></li>
+            </ul>
+        </section>
+        <!-- проекты в портфолио -->
+        <section>
+            <ul class="list">
+                <li><a href="#" class="projects-link"><img src="./images/notebook.jpg" alt="Макбук" width="370"><h3 class="projects-title-color">Технокряк</h3><p>Веб-сайт</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/basketball.jpg" alt="Два баскетболиста в воздухе" width="370"><h3 class="projects-title-color">Постер New Orlean vs Golden Star</h3><p>Дизайн</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/seafood.jpg" alt="Вывеска ресторана Seafood" width="370"><h3 class="projects-title-color">Ресторан Seafood</h3><p>Приложение</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/headphones.jpg" alt="Беспроводные наушники" width="370"><h3 class="projects-title-color">Проект Prime</h3><p>Маркетинг</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/boxes.jpg" alt="Две маленькие коробки" width="370"><h3 class="projects-title-color">Проект Boxes</h3><p>Приложение</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/monitor.jpg" alt="Монитор" width="370"><h3 class="projects-title-color">Inspiration has no Borders</h3><p>Веб-сайт</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/magazine.jpg" alt="Открытый журнал" width="370"><h3 class="projects-title-color">Издание Limited Edition</h3><p>Дизайн</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/labeltag.jpg" alt="Лейбл" width="370"><h3 class="projects-title-color">Проект LAB</h3><p>Маркетинг</p></a></li>
+                <li><a href="#" class="projects-link"><img src="./images/designer.jpg" alt="Дизайнер за роботой в ноутбуке" width="370"><h3 class="projects-title-color">Growing Business</h3><p>Приложение</p></a></li>
+            </ul>
+        </section>
     </main>
     <!--Подвал-->
     <footer class="footer">
