--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./css/common.css"/>
-    <link rel="stylesheet" href="./css/main.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css"/>
 </head>
 <body>
     <!--Шапка-->
@@ -33,7 +35,7 @@
         </section>
         <!--Особенности-->
         <section class="section">
-            <h2 class="section-title">Особенности</h2>
+            <h2 class="section-title-hide">Особенности</h2>
             <ul class="features list">
                 <li><h3 class="title">Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
                 <li><h3 class="title">Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
@@ -53,11 +55,11 @@
         <!--Наша команда-->
         <section class="section team">
             <h2 class="section-title">Наша команда</h2>
-            <ul class="list">
-                <li><img src="./images/i-demyanenko.jpg" alt="Игорь Демьяненко" width="270"><h3 class="title"> Игорь Демьяненко</h3><p> Product Designer</p></li>
-                <li><img src="./images/o-repina.jpg" alt="Ольга Репина" width="270"><h3 class="title"> Ольга Репина</h3><p> Frontend Developer</p></li>
-                <li><img src="./images/n-tarasov.jpg" alt="Николай Тарасов" width="270"><h3 class="title"> Николай Тарасов</h3><p> Marketing</p></li>
-                <li><img src="./images/m-ermakov.jpg" alt="Михаил Ермаков" width="270"><h3 class="title"> Михаил Ермаков</h3><p> Product Designer</p></li>
+            <ul class="team-list">
+                <li><img src="./images/i-demyanenko.jpg" alt="Игорь Демьяненко" width="270"><h3 class="name"> Игорь Демьяненко</h3><p> Product Designer</p></li>
+                <li><img src="./images/o-repina.jpg" alt="Ольга Репина" width="270"><h3 class="name"> Ольга Репина</h3><p> Frontend Developer</p></li>
+                <li><img src="./images/n-tarasov.jpg" alt="Николай Тарасов" width="270"><h3 class="name"> Николай Тарасов</h3><p> Marketing</p></li>
+                <li><img src="./images/m-ermakov.jpg" alt="Михаил Ермаков" width="270"><h3 class="name"> Михаил Ермаков</h3><p> Product Designer</p></li>
             </ul>
         </section>
     </main>
