--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio | Portfolio</title>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -31,6 +34,7 @@
         <h1 class="page-title">Portfolio</h1>
         <!-- кнопки-фильтры -->
         <section>
+        <h2>Кнопки-фильтры</h2>
             <ul class="list">
                 <li><button class="buttons" type="button">Все</button></li>
                 <li><button class="buttons" type="button">Веб-сайты</button></li>
