--- a/portfolio.html
+++ b/portfolio.html
@@ -34,7 +34,7 @@
         <h1 class="page-title">Portfolio</h1>
         <!-- кнопки-фильтры -->
         <section>
-        <h2>Кнопки-фильтры</h2>
+        <h2 class="section-title-hide">Наши проекты</h2>
             <ul class="list">
                 <li><button class="buttons" type="button">Все</button></li>
                 <li><button class="buttons" type="button">Веб-сайты</button></li>
