--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <address>
             <p class="address-fiz">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="address-foot list">
-                <li><a class="foot-li link" href="mailto:example.com">example.com</a></li>
+                <li><a class="foot-li link" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="foot-li link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
