Добавил Current для кнопки-фильтра и исправил в них шрифт

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
         <!-- кнопки-фильтры -->
         <section>
         <h2 class="section-title-hide">Наши проекты</h2>
-            <ul class="list">
-                <li><button class="buttons" type="button">Все</button></li>
+            <ul class="filtres list">
+                <li><button class="buttons current" type="button">Все</button></li>
                 <li><button class="buttons" type="button">Веб-сайты</button></li>
                 <li><button class="buttons" type="button">Приложения</button></li>
                 <li><button class="buttons" type="button">Дизайн</button></li>
